[package]
name = "poseidon"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "lib"]

[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "develop" }
[patch."https://github.com/privacy-scaling-explorations/poseidon.git"]
poseidon = { git = "https://github.com/scroll-tech/poseidon.git", branch = "scroll-dev-0220" }
[patch."https://github.com/privacy-scaling-explorations/halo2curves.git"]
halo2curves = { git = "https://github.com/scroll-tech/halo2curves.git", branch = "0.3.1-derive-serde" }

[dependencies]
poseidon-base = { git = "https://github.com/scroll-tech/poseidon-circuit", branch = "main" }
ff = "0.13"
bytemuck = "1.16.0"

